--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -71,7 +71,7 @@
             }
           },
           error: function(error) {
-            alert(error);
+            console.log(error)
           }
         });
       }
