--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -15,8 +15,7 @@
 
     <!-- Common styles -->
     <link href="../../assets/css/common.css" rel="stylesheet" />
-    <!-- Custom styles for this template -->
-    <link href="./res/css/office_homepage.css" rel="stylesheet" />
+    <link href="../../assets/css/colors.css" rel="stylesheet" />
 
     <!-- Bootstrap -->
 
@@ -75,9 +74,7 @@
   </head>
   <body>
     <main role="main" class="container">
-      <div class="header">
-        <h1>Office</h1>
-      </div>
+      <div class="header">Office</div>
 
       <div class="sub-header">
         <button
