Added basic animations for body and fixed minor bugs in office_create.html

--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -35,6 +35,11 @@
       crossorigin="anonymous"
     />
 
+    <!-- Common styles -->
+    <link href="../../assets/css/common.css" rel="stylesheet" />
+    <!-- Custom styles for this template -->
+    <link href="./res/css/office_homepage.css" rel="stylesheet" />
+
     <!-- Latest compiled and minified JavaScript -->
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
