--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -1,80 +1,9 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="icon" href="../../assets/img/favicon.png" />
-
-    <title>Warehouse counter</title>
-
-    <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- Common styles -->
-    <link href="../../assets/css/common.css" rel="stylesheet" />
-    <link href="../../assets/css/colors.css" rel="stylesheet" />
-
-    <!-- Bootstrap -->
-
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
-      crossorigin="anonymous"
-    />
-
-    <!-- Optional theme -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
-      integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ"
-      crossorigin="anonymous"
-    />
-
-    <!-- Common styles -->
-    <link href="../../assets/css/common.css" rel="stylesheet" />
-    <!-- Custom styles for this template -->
-    <link href="./res/css/office_homepage.css" rel="stylesheet" />
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-      integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-      crossorigin="anonymous"
-    ></script>
-
-    <script src="../../assets/js/table_generator.js"></script>
-    <script src="../../assets/js/request.js"></script>
     <script>
-      const headers_strings = {
-        MODIFY: "",
-        STATUS: "requestState",
-        PRODUCT: "productName",
-        FLAVOUR: "productFlavour",
-        NOTES: "notes",
-        "REQUEST DATE": "requestDate",
-        "DUE DATE": "dueDate",
-        "CLOSED DATE": "terminationDate",
-        "LAST COUNT": "lastCount",
-        "PREVIOUS COUNT": "previousCount",
-      };
-
-      const data = {
-        q_name: "office_requests",
-        q_data: {
-          "f.requestId": 2,
-          "d.lastCount": 10,
-        },
-      };
-
-      const requester = new Requester(data, function (result) {
-        table_maker(result.results, "request-table-container", headers_strings);
-      });
-      requester.query();
+      $("head").load("../../components/head.html");
     </script>
   </head>
   <body>
