--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       $("head").load("../../components/head.html");
     </script>
     <script>
-      $(document).ready(function () {
-        const headers_strings = {
-          MODIFY: "",
-          STATUS: "requestState",
-          PRODUCT: "productName",
-          FLAVOUR: "productFlavour",
-          NOTES: "notes",
-          "REQUEST DATE": "requestDate",
-          "DUE DATE": "dueDate",
-          "CLOSED DATE": "terminationDate",
-          "LAST COUNT": "lastCount",
-          "PREVIOUS COUNT": "previousCount",
-        };
+      const headers_strings = {
+        "MODIFY": "",
+        "STATUS": "requestState",
+        "PRODUCT": "productName",
+        "FLAVOUR": "productFlavour",
+        "NOTES": "notes",
+        "REQUEST DATE": "requestDate",
+        "DUE DATE": "dueDate",
+        "CLOSED DATE": "terminationDate",
+        "LAST COUNT": "lastCount",
+        "PREVIOUS COUNT": "previousCount",
+      };
 
-        const data = {
-          q_name: "office_requests",
-          q_data: {
-            "f.requestId": 2,
-            "d.lastCount": 10,
-          },
-        };
+      const data = {
+        q_name: "office_requests",
+        q_data: {},
+      };
 
         const requester = new Requester(data, function (result) {
           table_maker(result.results, "request-table-container", headers_strings);
         });
         requester.query();
-      });
 
       $(".table-row").click((eventObj) => {
         const requestId = eventObj.attr("id");
       });
     </script>
+    <title></title>
   </head>
   <body>
     <main role="main" class="container">
-      <!-- <div class="popup-container">
-        <h1>ROBAAAAA</h1>
-      </div> -->
+      <div class="popup-container">
+        <h1>KAABA</h1>
+      </div>
       <div class="header">Office</div>
 
       <div class="sub-header">
@@ -64,7 +60,12 @@
 
           <a class="dropdown-item" href="#">
             <label class="form-check-label" for="flexCheckChecked">
-              <input class="" type="checkbox" value="showClosed" id="flexCheckChecked" />
+              <input
+                class=""
+                type="checkbox"
+                value="showClosed"
+                id="flexCheckChecked"
+              />
               Show closed
             </label>
           </a>
