--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -6,40 +6,41 @@
       $("head").load("../../components/head.html");
     </script>
     <script>
-      const headers_strings = {
-        "MODIFY": "",
-        "STATUS": "requestState",
-        "PRODUCT": "productName",
-        "FLAVOUR": "productFlavour",
-        "NOTES": "notes",
-        "REQUEST DATE": "requestDate",
-        "DUE DATE": "dueDate",
-        "CLOSED DATE": "terminationDate",
-        "LAST COUNT": "lastCount",
-        "PREVIOUS COUNT": "previousCount",
-      };
+      $(document).ready(function () {
+        const headers_strings = {
+          MODIFY: "",
+          STATUS: "requestState",
+          PRODUCT: "productName",
+          FLAVOUR: "productFlavour",
+          NOTES: "notes",
+          "REQUEST DATE": "requestDate",
+          "DUE DATE": "dueDate",
+          "CLOSED DATE": "terminationDate",
+          "LAST COUNT": "lastCount",
+          "PREVIOUS COUNT": "previousCount",
+        };
 
-      const data = {
-        q_name: "office_requests",
-        q_data: {},
-      };
+        const data = {
+          q_name: "office_requests",
+          q_data: {},
+        };
 
         const requester = new Requester(data, function (result) {
           table_maker(result.results, "request-table-container", headers_strings);
         });
         requester.query();
+      });
 
       $(".table-row").click((eventObj) => {
         const requestId = eventObj.attr("id");
       });
     </script>
-    <title></title>
   </head>
   <body>
     <main role="main" class="container">
-      <div class="popup-container">
+      <!-- <div class="popup-container">
         <h1>KAABA</h1>
-      </div>
+      </div> -->
       <div class="header">Office</div>
 
       <div class="sub-header">
@@ -60,12 +61,7 @@
 
           <a class="dropdown-item" href="#">
             <label class="form-check-label" for="flexCheckChecked">
-              <input
-                class=""
-                type="checkbox"
-                value="showClosed"
-                id="flexCheckChecked"
-              />
+              <input class="" type="checkbox" value="showClosed" id="flexCheckChecked" />
               Show closed
             </label>
           </a>
