--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -45,7 +45,7 @@
 
       <div class="sub-header">
         <button
-          class="btn dropdown-toggle"
+          class="btn styled-btn dropdown-toggle"
           type="button"
           id="btn-filters"
           data-toggle="dropdown"
@@ -66,7 +66,7 @@
             </label>
           </a>
         </div>
-        <button type="button" id="btn-add-request" class="btn">Add Request</button>
+        <button type="button" id="btn-add-request" class="btn styled-btn">Add Request</button>
       </div>
 
       <div class="request-table" id="request-table-container"></div>
