--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -6,7 +6,35 @@
       $("head").load("../../components/head.html");
     </script>
     <script>
+
+      function make_editable(element) {
+        $('#edit-popup').show();
+        const popup = $('#popup-data');
+
+        // popup.text("id is : " + element.attr('id'));
+      }
+
+      function register_clicks() {
+        $(".table-row").dblclick(function (e) {
+          make_editable($(this));
+        });
+
+        $("#edit-popup").click(function (e) {
+          if (e.target === this) {
+            $(this).hide();
+          }
+        })
+
+        $(".exit-button").click(function (e) {
+          if (e.target === this) {
+            $("#edit-popup").hide();
+          }
+        })
+      }
+
       $(document).ready(function () {
+        $('#edit-popup').hide();
+
         const headers_strings = {
           MODIFY: "",
           STATUS: "requestState",
@@ -27,21 +55,143 @@
 
         const requester = new Requester(data, function (result) {
           table_maker(result.results, "request-table-container", headers_strings);
+          register_clicks();
         });
         requester.query();
-      });
-
-      $(".table-row").click((eventObj) => {
-        const requestId = eventObj.attr("id");
       });
     </script>
   </head>
   <body>
     <main role="main" class="container">
-      <!-- <div class="popup-container">
-        <h1>KAABA</h1>
-      </div> -->
-      <div class="header">Office</div>
+      <div id="edit-popup" class="popup-container">
+        <div class="popup">
+          <div class="exit-button-wrapper"><span class="exit-button">&times;</span></div>
+          <div id="popup-data" class="container">
+            <form class="form" role="form">
+              <div class="row">
+                <label class="col-1 col-form-label">Product</label>
+                <div class="col">
+                  <input id="req_id" name="req_id" type="text" class="form-control" aria-describedby="req_idHelpBlock" required="required" readonly hidden>
+                  <div class="row">
+                    <div class="form-group col no-gutters">
+                      <label class="col-12 col-form-label" for="prod_code">Product Code</label>
+                      <div class="col-12">
+                        <div class="input-group">
+                          <div class="input-group-prepend">
+                            <div class="input-group-text"><i class="fa fa-tag"></i></div>
+                          </div>
+                          <input id="prod_code" name="prod_code" type="text" class="form-control" aria-describedby="prod_codeHelpBlock" required="required">
+                        </div>
+                        <span id="prod_codeHelpBlock" class="form-text text-muted">Automatically generated product code</span>
+                      </div>
+                    </div>
+                    <div class="form-group col no-gutters">
+                      <label for="prod" class="col-2 col-form-label">Product</label>
+                      <div class="col-12">
+                        <div class="input-group">
+                          <div class="input-group-prepend">
+                            <div class="input-group-text">
+                              <i class="fa fa-archive"></i>
+                            </div>
+                          </div>
+                          <input id="prod" name="prod" type="text" class="form-control" aria-describedby="prodHelpBlock" required="required" readonly>
+                        </div>
+                        <span id="prodHelpBlock" class="form-text text-muted">Insert a product name in the field and select the corresponding one</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="form-group col no-gutters">
+                      <label class="col-2">Flavour</label>
+                      <div class="col-12">
+                        <div class="custom-control custom-radio custom-control-inline">
+                          <input name="flavour" id="flavour_0" type="radio" aria-describedby="flavourHelpBlock" required="required" class="custom-control-input" value="red">
+                          <label for="flavour_0" class="custom-control-label">red</label>
+                        </div>
+                        <div class="custom-control custom-radio custom-control-inline">
+                          <input name="flavour" id="flavour_1" type="radio" aria-describedby="flavourHelpBlock" required="required" class="custom-control-input" value="blue">
+                          <label for="flavour_1" class="custom-control-label">blue</label>
+                        </div>
+                        <div class="custom-control custom-radio custom-control-inline">
+                          <input name="flavour" id="flavour_2" type="radio" aria-describedby="flavourHelpBlock" required="required" class="custom-control-input" value="green">
+                          <label for="flavour_2" class="custom-control-label">green</label>
+                        </div>
+                        <span id="flavourHelpBlock" class="form-text text-muted">Select the flavour of the product</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="form-group row">
+                <label for="notes" class="col-1 col-form-label">Notes</label>
+                <div class="col-11">
+                  <textarea id="notes" name="notes" cols="40" rows="5" class="form-control" aria-describedby="notesHelpBlock"></textarea>
+                  <span id="notesHelpBlock" class="form-text text-muted">Add notes to this request</span>
+                </div>
+              </div>
+              <div class="form-group row">
+                <input hidden id="date_creation" name="date_creation" type="text" aria-describedby="date_creationHelpBlock" required="required" class="form-control" readonly>
+              </div>
+              <div class="form-group row">
+                <label for="date_due" class="col-1 col-form-label">Due Date</label>
+                <div class="col-11">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <i class="fa fa-calendar"></i>
+                      </div>
+                    </div>
+                    <input id="date_due" name="date_due" type="date" class="form-control" aria-describedby="date_dueHelpBlock" required="required">
+                  </div>
+                  <span id="date_dueHelpBlock" class="form-text text-muted">Date before which the counting should be completed</span>
+                </div>
+              </div>
+              <div class="form-group row">
+                <input hidden id="status" name="status" type="text" class="form-control" aria-describedby="statusHelpBlock" required="required" readonly>
+              </div>
+
+              <div class="row">
+                <label class="col-1 col-form-label">Counts</label>
+                <div class="form-group col no-gutters">
+                  <label for="count_previous" class="col-12 col-form-label">Previous Count</label>
+                  <div class="col-12">
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">
+                          <i class="fa fa-bar-chart-o"></i>
+                        </div>
+                      </div>
+                      <input id="count_previous" name="count_previous" type="text" class="form-control" aria-describedby="count_previousHelpBlock" readonly>
+                    </div>
+                    <span id="count_previousHelpBlock" class="form-text text-muted">Automatically generated previous count</span>
+                  </div>
+                </div>
+                <div class="form-group col no-gutters">
+                  <label for="count_last" class="col-12 col-form-label">Last Count</label>
+                  <div class="col-12">
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">
+                          <i class="fa fa-refresh"></i>
+                        </div>
+                      </div>
+                      <input id="count_last" name="count_last" type="text" class="form-control" readonly>
+                    </div>
+                    <span id="count_lastHelpBlock" class="form-text text-muted">Latest count created.</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group row col-12 justify-content-center">
+                <button name="submit" type="submit" class="btn btn-primary">Create</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="header test-class">Office</div>
 
       <div class="sub-header">
         <div class="dropdown">
