Added buttons to popup form with styles

--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -218,9 +218,25 @@
                         </div>
                     </div>
 
-                    <div class="form-group row col-12 justify-content-center">
-                        <button name="submit" type="submit" class="btn btn-primary">Create</button>
+                    <div class="col">
+                        <div class="form-group row col-12 justify-content-center">
+                            <button name="update" type="submit" class="styled-btn">Update</button>
+                        </div>
+                        <div class="popup-buttons-wrapper">
+                                <button name="close" type="submit" class="styled-btn">
+                                    <span class="button-image">
+                                        <img src="../../assets/img/closed_icon.png" alt="Close"/>
+                                    </span>
+
+                                </button>
+                                <button name="recount" type="submit" class="styled-btn">
+                                    <span class="button-image">
+                                        <img src="../../assets/img/recountRequest_icon.png" alt="Recount"/>
+                                    </span>
+                                </button>
+                        </div>
                     </div>
+
                 </form>
             </div>
         </div>
