--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -17,14 +17,19 @@
         $("#date_due").attr({
           min: today,
         });
+
+        const table_query_data = {
+          q_name: "office_requests",
+          q_data: {},
+        };
+        const table_data_requester = new Requester(table_query_data, function (result) {});
+        table_data_requester.query();
       });
     </script>
   </head>
   <body>
     <main role="main" class="container">
-      <div class="header">
-        <h1>Request creation<span class="blinker"></span></h1>
-      </div>
+      <div class="header weight-800">Request creation<span class="blinker"></span></div>
       <div class="request-form">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 
@@ -187,8 +192,15 @@
             </div>
           </div>
 
-          <div class="form-group row col-12 justify-content-center">
-            <button name="submit" type="submit" class="btn btn-primary">Create</button>
+          <div class="form-group row col-12 justify-content-evenly">
+            <button name="submit" type="submit" class="col-5 styled-btn btn-blue">Create</button>
+            <a
+              name="submit"
+              type="submit"
+              class="col-5 styled-btn btn-red-dark text-align-center no-text-decoration"
+              href="office_homepage.html"
+              >Back</a
+            >
           </div>
         </form>
       </div>
