Working on update and create functionalities Fixed API query (office details)

--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -18,6 +18,7 @@
           min: today,
         });
 
+        //Query
         const table_query_data = {
           q_name: "office_requests",
           q_data: {},
